--- a/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
+++ b/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
@@ -8,9 +8,8 @@
 <div class="">
     <EntToolbar class="my-4">
         <EntButton  Appearance="ButtonAppearance.Default" Color="ButtonColor.Primary" Icon="EntIconName.Add"  >Add</EntButton>
-        <EntButton  Appearance="ButtonAppearance.Default" Icon="EntIconName.Note" Loading="true" >Document</EntButton>
+        <EntButton  Appearance="ButtonAppearance.Outline" Icon="EntIconName.Delete" Loading="true" >Delete</EntButton>
         <EntButton  Appearance="ButtonAppearance.Outline" Icon="EntIconName.Note"></EntButton>
-        <EntButton  Appearance="ButtonAppearance.Subtle" Icon="EntIconName.Upload"></EntButton>
     </EntToolbar>
     <EntCard Expandable="true"  Title="Form Layout">
         <CardBody>
