--- a/Source/Enter.UI/Styles/components/_ent_button.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_button.component.scss
@@ -1,22 +1,28 @@
-﻿:root {
+﻿/* 
+todo: 
+  1- disable button
+  2- focus button
+*/
+
+:root {
   --ent-btn-font-size: 14px;
   --ent-btn-line-height: 20px;
-  
-  --ent-btn-space-x: 12px;
-  --ent-btn-space-y: 5px; 
+
+  --ent-btn-space-x: 11px;
+  --ent-btn-space-y: 5px;
   --ent-btn-space-b: 8px;
-  
+
   --ent-btn-bg: var(--ent-bg-neutral);
   --ent-btn-bg-hover: var(--ent-bg-neutral-highlight);
   --ent-btn-bg-active: var(--ent-bg-neutral-emphasis);
-  --ent-btn-cl: var(--ent-fg-base);
-  --ent-btn-cl-hover: var(--ent-fg-base-highlight);
-  --ent-btn-cl-active: var(--ent-fg-base-emphasis);
+  --ent-btn-fg: var(--ent-fg-base);
+  --ent-btn-fg-hover: var(--ent-fg-base-highlight);
+  --ent-btn-fg-active: var(--ent-fg-base-emphasis);
   --ent-btn-stroke: var(--ent-stroke-base); // 2
   --ent-btn-stroke-hover: var(--ent-stroke-base-highlight);
   --ent-btn-stroke-active: var(--ent-stroke-base-emphasis);
   --ent-btn-stroke-width: var(--ent-stroke-thin);
-  --ent-btn-border-radius: var(--ent-radius-sm);
+  --ent-btn-border-radius: var(--ent-radius-md);
 }
 
 .ent-btn {
@@ -30,7 +36,7 @@
   font-size: var(--ent-btn-font-size);
   line-height: var(--ent-btn-line-height);
   background-color: var(--ent-btn-bg);
-  color: var(--ent-btn-cl);
+  color: var(--ent-btn-fg);
   border: var(--ent-btn-stroke-width) solid var(--ent-btn-stroke);
   font-family: var(--fontFamilyBase);
   outline-style: none;
@@ -40,67 +46,77 @@
   //min-width: 96px;
   transition: var(--ent-transition-all);
   overflow: hidden;
-  &:hover {
-    background: var(--ent-btn-bg-hover);
-    color: var(--ent-btn-cl-hover);
-    border-color: var(--ent-btn-stroke-hover);
-    transition: var(--ent-transition-all);
-    
-    .icon-wrapper > .icon {
-      color: var(--ent-btn-cl-hover);
-    }
-  }
-  &:hover:active {
-    background: var(--ent-btn-bg-active);
-    color: var(--ent-btn-cl-active);
-    border-color: var(--ent-btn-stroke-active);
-    transition: var(--ent-transition-all);
-
-    .icon-wrapper > .icon {
-      color: var(--ent-btn-cl-active);
-    }
-  }
-
-  &.ent-btn-only-icon {
-    min-width: unset;
-
-    
-    .icon-wrapper{
-      margin: 0;  
-    }
-    
-    transition: var(--ent-transition-all);
+  
+  &:disabled {
+    cursor: not-allowed;
+    --ent-btn-bg: var(--ent-bg-disabled,rgba(9, 30, 66, 0.04)) !important;
+    --ent-btn-fg: var(--ent-fg-disabled) !important;
   }
   
-  .icon-wrapper{
-    height: 20px;
-    width: 20px;
+  &:not(:disabled) {
+    
+    &:hover {
+      background: var(--ent-btn-bg-hover);
+      color: var(--ent-btn-fg-hover);
+      border-color: var(--ent-btn-stroke-hover);
+      
+      .icon {
+        color: var(--ent-btn-fg-hover);
+      }      
+    }
+    
+    &:hover:active {
+      background: var(--ent-btn-bg-active);
+      color: var(--ent-btn-fg-active);
+      border-color: var(--ent-btn-stroke-active);
+
+      .icon {
+        color: var(--ent-btn-fg-hover);
+      }
+      
+    }
+  }
+  
+  &.ent-btn-only-icon {
+    min-width: unset;
+    --ent-btn-space-x: var(--ent-btn-space-y);
+    
+    .icon-wrapper {
+      margin: 0;
+    }
+    
+  }
+
+  .icon-wrapper {
+    width: var(--ent-btn-line-height);
+    height: var(--ent-btn-line-height);
     display: inline-flex;
     align-items: center;
     justify-content: center;
     margin-inline-end: 6px;
-    
+
     .icon {
-      height: 14px;
-      width: 14px;
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      
-      color: var(--ent-btn-cl);
+      font-size: var(--ent-btn-font-size);
+      width: var(--ent-btn-font-size);
+      height: var(--ent-btn-font-size);
+      color: var(--ent-btn-fg);
     }
+
     transition: var(--ent-transition-all);
   }
-  
+
 }
 
 .ent-btn-primary {
   --ent-btn-bg: var(--ent-bg-primary);
   --ent-btn-bg-hover: var(--ent-bg-primary-highlight);
   --ent-btn-bg-active: var(--ent-bg-primary-emphasis);
-  --ent-btn-cl: var(--ent-fg-light);
-  --ent-btn-cl-hover: var(--ent-fg-light-highlight);
-  --ent-btn-cl-active: var(--ent-fg-light-emphasis);
+  --ent-btn-fg: var(--ent-fg-light);
+  --ent-btn-fg-hover: var(--ent-fg-light-highlight);
+  --ent-btn-fg-active: var(--ent-fg-light-emphasis);
   --ent-btn-stroke: var(--ent-stroke-primary);
   --ent-btn-stroke-hover: var(--ent-stroke-primary-highlight);
   --ent-btn-stroke-active: var(--ent-stroke-primary-emphasis);
@@ -108,34 +124,37 @@
 
 .ent-btn-outline {
   --ent-btn-bg: transparent;
-  --ent-btn-cl: var(--ent-fg-base);
+  --ent-btn-fg: var(--ent-fg-base);
   --ent-btn-stroke: var(--ent-stroke-base);
 }
+
 .ent-btn-outline.ent-btn-primary {
   --ent-btn-bg: transparent;
-  --ent-btn-cl: var(--ent-fg-primary);
+  --ent-btn-fg: var(--ent-fg-primary);
   --ent-btn-stroke: var(--ent-stroke-primary);
 }
 
 .ent-btn-subtle {
   --ent-btn-bg: var(--ent-bg-neutral-subtle);
-  --ent-btn-cl: var(--ent-fg-base);
+  --ent-btn-fg: var(--ent-fg-base);
   --ent-btn-stroke: var(--ent-bg-neutral-subtle);
 }
+
 .ent-btn-subtle.ent-btn-primary {
   --ent-btn-bg: var(--ent-bg-primary-subtle);
-  --ent-btn-cl: var(--ent-fg-primary);
+  --ent-btn-fg: var(--ent-fg-primary);
   --ent-btn-stroke: var(--ent-bg-primary-subtle);
 }
 
 .ent-btn-ghost {
   --ent-btn-bg: transparent;
-  --ent-btn-cl: var(--ent-fg-base);
+  --ent-btn-fg: var(--ent-fg-base);
   --ent-btn-stroke: transparent;
 }
+
 .ent-btn-ghost.ent-btn-primary {
   --ent-btn-bg: transparent;
-  --ent-btn-cl: var(--ent-fg-primary);
+  --ent-btn-fg: var(--ent-fg-primary);
   --ent-btn-stroke: transparent;
 }
 
@@ -145,74 +164,20 @@
   --ent-btn-font-size: 12px;
   --ent-btn-line-height: 16px;
 
-  --ent-btn-space-x: 8px;
+  --ent-btn-space-x: 7px;
   --ent-btn-space-y: 3px;
   --ent-btn-space-b: 6px;
 
 
-
-  &.ent-btn-only-icon {
-    --ent-btn-space-x: 3px;
-    --ent-btn-space-y: 3px;
-  }
-
-  .icon-wrapper  {
-    width: 16px;
-    height: 16px;
-
-    .icon {
-      font-size: 12px;
-      width: 12px;
-      height: 12px;
-    }
-  }
-  
 }
-.ent-btn-size-md {
 
-
-  &.ent-btn-only-icon {
-    --ent-btn-space-x: 5px;
-    --ent-btn-space-y: 5px;
-  }
-
-  .icon-wrapper  {
-    width: 20px;
-    height: 20px;
-
-    .icon {
-      font-size: 14px;
-      width: 14px;
-      height: 14px;
-    }
-  }
-  
-}
 .ent-btn-size-lg {
 
   --ent-btn-font-size: 16px;
   --ent-btn-line-height: 24px;
 
-  --ent-btn-space-x: 16px;
+  --ent-btn-space-x: 15px;
   --ent-btn-space-y: 7px;
-  --ent-btn-space-b: 8px;
+  --ent-btn-space-b: 12px;
 
-
-
-  &.ent-btn-only-icon {
-    --ent-btn-space-x: 7px;
-    --ent-btn-space-y: 7px;
-  }
-
-  .icon-wrapper  {
-    width: 24px;
-    height: 24px;
-
-    .icon {
-      font-size: 16px;
-      width: 16px;
-      height: 16px;
-    }
-  }
-  
 }
