--- a/Source/Enter.UI/Styles/themes/light.theme.scss
+++ b/Source/Enter.UI/Styles/themes/light.theme.scss
@@ -1,6 +1,11 @@
 ﻿:root {
 
   // Background 
+
+  --ent-bg-disabled: #091E420A;
+  --ent-bg-input: #FFFFFF;
+  --ent-bg-input-hovered: #F7F8F9;
+  --ent-bg-input-pressed: #FFFFFF;
   
   --ent-bg-body: #eaeaea;
   --ent-bg-body-backdrop: rgba(37, 37, 37, 0.5);
@@ -21,7 +26,9 @@
   // Foreground
   
   --ent-fg-body: #191919;
-
+  --ent-fg-disabled:#A5ADBA;
+  --ent-fg-inverse: #FFFFFF;
+  
   --ent-fg-base: #252525;
   --ent-fg-base-highlight: #242424;
   --ent-fg-base-select: #232323;
